OrbitAOS.V6/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbitaos-v6-service
  namespace: orbitaos-v6
  labels:
    app: orbitaos-v6
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: orbitaos-v6
